--- a/roommate-cli/Makefile
+++ b/roommate-cli/Makefile
@@ -6,6 +6,7 @@ deps:
 		@echo "--> Installing build dependencies"
 		@go get github.com/deckarep/gosx-notifier
 		@go get github.com/jteeuwen/go-bindata
+		@go get github.com/jteeuwen/go-bindata/go-bindata
 
 format:
 		@echo "--> Running go fmt"
